fixed spacing issue on the front page - removed the coming soon tags

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,7 +101,7 @@ body{
   }
 
   .browse{ 
-    // margin-top: 16px;   
+    margin-top: 16px;   
   }
 }
 
